fixed dialog view on iphone

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
+  position: fixed !important;
   top: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.6);
@@ -26,6 +26,7 @@
   width: 420px;
   border-radius: 20px;
   border: 1px solid lightgrey;
+  margin-top: 100px;
 }
 
 .detailCardHead {
@@ -182,7 +183,7 @@
 }
 
 .arrowResp {
-  height: 50px !important;
+  height: 40px !important;
   cursor: pointer;
 }
 
@@ -231,7 +232,7 @@
   }
 
   .arrowButtonsResp {
-    margin-top: 16px;
+    margin-top: 8px;
     display: flex;
     gap: 120px;
   }
